--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
+              
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           },
           "configurations": {
             "production": {
@@ -65,6 +72,7 @@
           "configurations": {
             "production": {
               "browserTarget": "purchase-analysis-project:build:production"
+
             },
             "development": {
               "browserTarget": "purchase-analysis-project:build:development"
@@ -90,12 +98,16 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "cade7c95-a3d2-4a6f-87c7-13321ddffc6a"
   }
 }
